--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="task-container">
       <ul>
         <li v-for="(task, index) in listTodo">
-          <span>{{task.word}}</span>
+          <span :class="{'done' : task.cross === true}">{{task.word}}</span>
           <i class="fa-solid fa-trash-can"></i>
         </li>
     
