--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
     <div class="task-container">
       <ul>
-        <li v-for="(task, index) in listTodo" @click="done">
+        <li v-for="(task, index) in listTodo" @click="task.cross = !task.cross">
           <span :class="{'done' : task.cross === true}">{{task.word}}</span>
-          <i class="fa-solid fa-trash-can" @click="deleteTask(index)"></i>
+          <i class="fa-solid fa-trash-can" @click.stop="deleteTask(index, task)"></i>
         </li>
     
       </ul>
