--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
     </div>
 
     <div class="task-container">
-      <ul>
+      <ul v-if="listTodo.length > 0">
         <li v-for="(task, index) in listTodo" @click="task.cross = !task.cross">
           <span :class="{'done' : task.cross === true}">{{task.word}}</span>
           <i class="fa-solid fa-trash-can" @click.stop="deleteTask(index, task)"></i>
         </li>
-    
+        
       </ul>
+      <p v-else class="error">Non sono presenti task</p>
 
     </div>
 
